GenerateAndAttachPDF Apex class

--- a/src/main/metadata/classes/GenerateAndAttachPDF.cls
+++ b/src/main/metadata/classes/GenerateAndAttachPDF.cls
@@ -70,10 +70,14 @@ public with sharing class GenerateAndAttachPDF {
      */
    public PageReference GenerateAndAttachPDF() {  
        if(cas.Vehicle__c!=Null && cas.AccountId!=Null){
-                VehicleRelationshipList=[Select id,Vehicle_ID__c,Contact__c,Selling_Dealer__c,Selling_Dealer__r.Name,Last_Service_Dealer__c,
-                                         Last_Service_Dealer__r.Name,toLabel(Finance_Method__c),Registration_Date__c,Registration_Number__c
-                                         from Vehicle_Relationship__c Where Vehicle_ID__c=:cas.Vehicle__c  AND Contact__c=:cas.AccountId limit 1];
-         }    
+               List<Vehicle_Relationship__c> lstVehicleRelationship=[Select id,Vehicle_ID__c,Contact__c,Selling_Dealer__c,Selling_Dealer__r.Name,Last_Service_Dealer__c,Last_Service_Dealer__r.Name,Finance_Method__c,Registration_Date__c,Registration_Number__c
+                                    from Vehicle_Relationship__c Where Vehicle_ID__c=:cas.Vehicle__c  AND Contact__c=:cas.AccountId limit 1];
+          
+         if(lstVehicleRelationship!=null && !lstVehicleRelationship.isEmpty())
+            {                                
+               VehicleRelationshipList=lstVehicleRelationship[0];               
+            }
+        }   
        CustomerStatement= cas.Customer_Statement__c;
        PRCommentForDealer = cas.PR_Comment_for_Dealer__c;
        system.debug('CustomerStatement>>>>'+CustomerStatement);
