Updated to fix test classs issues & translation

--- a/src/main/metadata/classes/TriggerAccountTriggerHandlerJP.cls
+++ b/src/main/metadata/classes/TriggerAccountTriggerHandlerJP.cls
@@ -31,27 +31,21 @@ implements TriggerHandlerIf
             AccountHelperJP.updatePrimaryContactInformationBeforeUpdate(Trigger.new,(Map<Id,Account>)Trigger.OldMap,trigger.isUpdate);
             AccountHelperJP.updatePrimaryAddressdisplay(Trigger.new,trigger.isUpdate);
         }
-        if(isAfter && isInsert)
+        if(isAfter && isInsert && && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccNew);
             AccountHelperJP.createUCID(Trigger.new,trigger.isInsert);
             
             AccountHelperJP.entityNotifyUpdate('INSERT',ListAccNew[0].Id,serializedObject);
         } 
-        if(isAfter && isUpdate)
+        if(isAfter && isUpdate && !System.isFuture())
         {
-            if(System.isFuture()){
-				return;
-			}
-			else{
-				serializedObject=json.serialize(ListAccNew);
+            serializedObject=json.serialize(ListAccNew);
             
-				AccountHelperJP.entityNotifyUpdate('UPDATE',ListAccNew[0].Id,serializedObject);
-			}
-				
+            AccountHelperJP.entityNotifyUpdate('UPDATE',ListAccNew[0].Id,serializedObject);
         }
         
-        if(isAfter && isDelete)
+        if(isAfter && isDelete && && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccOld);
             AccountHelperJP.entityNotifyUpdate('DELETE',ListAccOld[0].Id,serializedObject);
@@ -75,18 +69,18 @@ implements TriggerHandlerIf
             AccountHelperJP.updatePrimaryAddressdisplay(Trigger.new,trigger.isUpdate);
         }
         
-        if(isAfter && isInsert)
+        if(isAfter && isInsert && && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccNew);
             AccountHelperJP.entityNotifyUpdate('INSERT',ListAccNew[0].Id,serializedObject);
         } 
-        if(isAfter && isUpdate)
+        if(isAfter && isUpdate && && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccNew);
             AccountHelperJP.entityNotifyUpdate('UPDATE',ListAccNew[0].Id,serializedObject);
         }
         
-        if(isAfter && isDelete)
+        if(isAfter && isDelete && && !System.isFuture())
         {
             serializedObject=json.serialize(ListAccOld);
             AccountHelperJP.entityNotifyUpdate('DELETE',ListAccOld[0].Id,serializedObject);
