--- a/src/main/metadata-au/classes/Lead_AddmultiBrandControllerTest.cls
+++ b/src/main/metadata-au/classes/Lead_AddmultiBrandControllerTest.cls
@@ -24,16 +24,38 @@ public with sharing class Lead_AddmultiBrandControllerTest
         lead.Lead_Source__c = 'Web Form';
         lead.Nature_of_Request__c='General Enquiry';
         lead.Business_Unit__c= 'Vans';
-        lead.Lead_Items__c = '';   
+        lead.Lead_Items__c = 'lead items';
         lead.Sub_BusinessUnit__c='Auto Body Repairer';
-        lead.CAC_Lead_Status__c = 'Credit Review in Process';
-        insert lead;
+        lead.CAC_Lead_Status__c = 'Credit Review in Process'; 
         ledlist.add(lead);
     }
 	public static testmethod void unittest()
     {
         cretaetestdata();
         test.startTest();
+        insert ledlist;
+        ApexPages.currentPage().getParameters().put('Id',lead.id);        
+        Lead_AddmultiBrandController multibrandcntroller = new Lead_AddmultiBrandController(new ApexPages.StandardController(lead));
+        Lead_AddmultiBrandController.wrappermultibrandclass wraper = new Lead_AddmultiBrandController.wrappermultibrandclass();
+        wraper.vehiclebrand = 'BMW';
+        wraper.vechmodel = 'Aclass';
+        wraper.vechquanty = '2';
+        wraper.brands = listselops;
+        multibrandcntroller.getbrands();
+        multibrandcntroller.addrow();
+        multibrandcntroller.save();        
+        test.stopTest();
+        Lead__c lead1 = [select Assigned_Dealer__c,Lead_Items__c from Lead__c where id =:lead.id ];
+        system.assertEquals(lead1.Assigned_Dealer__c,lead.Assigned_Dealer__c);
+        
+    }
+    public static testmethod void unittest1()
+    {
+        cretaetestdata();
+        test.startTest();
+        insert ledlist;
+        lead.Lead_Items__c = '';
+        update ledlist;
         ApexPages.currentPage().getParameters().put('Id',lead.id);
         Lead_AddmultiBrandController multibrandcntroller = new Lead_AddmultiBrandController(new ApexPages.StandardController(lead));
         Lead_AddmultiBrandController.wrappermultibrandclass wraper = new Lead_AddmultiBrandController.wrappermultibrandclass();
@@ -41,12 +63,11 @@ public with sharing class Lead_AddmultiBrandControllerTest
         wraper.vechmodel = 'Aclass';
         wraper.vechquanty = '2';
         wraper.brands = listselops;
-        lead.Lead_Items__c = wraper.vehiclebrand + wraper.vechmodel + wraper.vechquanty;
-        update lead;
-        ledlist.add(lead);
         multibrandcntroller.getbrands();
-        multibrandcntroller.save();
         multibrandcntroller.addrow();
+        multibrandcntroller.save();
         test.stopTest();
+        Lead__c lead1 = [select Assigned_Dealer__c,Lead_Items__c from Lead__c where id =:lead.id ];
+        system.assertEquals(lead1.Assigned_Dealer__c,lead.Assigned_Dealer__c);
     }
 }
